--- a/Task5.ipynb
+++ b/Task5.ipynb
@@ -1234,7 +1234,7 @@
     "\n",
     "6)trunk_wire - Проблемы со стволом, вызванные тросом или проводами \n",
     "\n",
-    "7)trnk_light - Проблемы с багажником, вызванные освещением \n",
+    "7)trnk_light - Проблемы со стволом, вызванные освещением \n",
     "\n",
     "8)trnk_other - Наличие других проблем со стволом \n",
     "\n",
