--- a/Task5.ipynb
+++ b/Task5.ipynb
@@ -356,7 +356,7 @@
     "\n",
     "11)steward - Количество замеченных признаков управления (Текст Значения доменов: 1 или 2 ,3 или 4, 4 или больше, Ничего)\n",
     "\n",
-    "12)guards - Наличие и тип охраны деревьевНаличие и тип охраны деревьев (Текст Доменные ценности: Вредные Полезно Нет Не уверен)\n",
+    "12)guards - Наличие и тип охраны деревьев (Текст Доменные ценности: Вредные Полезно Нет Не уверен)\n",
     "\n",
     "13)sidewalk - Повреждение тротуара в непосредственной близости от дерева (Текст Значения домена: Повреждение, Не повреждено)\n",
     "\n",
@@ -370,7 +370,7 @@
     "\n",
     "18)trunk_wire - Проблемы со стволом, вызванные тросом или проводами (Текст Значения домена: Да Нет)\n",
     "\n",
-    "19)trnk_light - Проблемы с багажником, вызванные освещением (Текст Значения домена: Да Нет)\n",
+    "19)trnk_light - Проблемы со стволом, вызванные освещением (Текст Значения домена: Да Нет)\n",
     "\n",
     "20)trnk_other - Наличие других проблем со стволом (Текст Значения домена: Да Нет)\n",
     "\n",
@@ -430,7 +430,7 @@
     "1)status Статус дерева\n",
     "2)health Здоровье деревьев\n",
     "3)steward Количество замеченных признаков управления\n",
-    "4)guards Наличие и тип охраны деревьевНаличие и тип охраны деревьев\n",
+    "4)guards Наличие и тип охраны деревьев\n",
     "5)user_type Категория пользователя, который собрал эту точку дерева\n",
     "6)borocode Геокодирование на основе местоположения точки дерева\n",
     "7)boroname Геокодирование на основе местоположения точки дерева"
@@ -612,11 +612,7 @@
     "3)spc_common\n",
     "4)steward\n",
     "5)guards\n",
-    "6)sidewalk\n",
-    "7)problems\n",
-    "\n",
-    "*Данные признаки не обозначены в документации к датасету.\n",
-    "council district,census tract,bin,bbl              "
+    "6)sidewalk             "
    ]
   },
   {
