--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "city_103       10000+      Pvt Ltd           >4              72  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "max                  0.949000      334.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "Name: gender, dtype: int32"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "Name: experience, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -513,11 +513,11 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -527,11 +527,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -542,10 +542,10 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>22</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -555,11 +555,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -569,11 +569,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "      <td>72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -591,22 +591,22 @@
        "\n",
        "          enrolled_university  education_level  major_discipline  experience  \\\n",
        "city                                                                           \n",
-       "city_41                     2                1                 1          15   \n",
-       "city_103                    3                1                 1          21   \n",
-       "city_21                     3                1                 0           0   \n",
-       "city_13                     3                0                 1          13   \n",
-       "city_103                    3                1                 1           5   \n",
+       "city_41                     2                1                 3          16   \n",
+       "city_103                    3                1                 3          11   \n",
+       "city_21                     3                1                 0          22   \n",
+       "city_13                     3                0                 3           8   \n",
+       "city_103                    3                1                 3           5   \n",
        "\n",
        "          company_size  company_type  last_new_job  training_hours  \n",
        "city                                                                \n",
-       "city_41              8             0             2              21  \n",
-       "city_103             0             3             2              98  \n",
-       "city_21              0             3             4              15  \n",
-       "city_13              2             3             2              39  \n",
-       "city_103             6             3             1              72  "
+       "city_41              2             0             4              21  \n",
+       "city_103             0             5             4              98  \n",
+       "city_21              0             5             2              15  \n",
+       "city_13              1             5             4              39  \n",
+       "city_103             4             5             3              72  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -721,11 +721,11 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -735,11 +735,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -750,10 +750,10 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>22</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -763,11 +763,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -777,11 +777,11 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "      <td>72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -806,7 +806,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>3</td>\n",
+       "      <td>12</td>\n",
        "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -819,8 +819,8 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5</td>\n",
@@ -834,10 +834,10 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>15</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -849,9 +849,9 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>6</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -861,10 +861,10 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>6</td>\n",
        "      <td>3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -890,36 +890,36 @@
        "\n",
        "          enrolled_university  education_level  major_discipline  experience  \\\n",
        "city                                                                           \n",
-       "city_41                     2                1                 1          15   \n",
-       "city_103                    3                1                 1          21   \n",
-       "city_21                     3                1                 0           0   \n",
-       "city_13                     3                0                 1          13   \n",
-       "city_103                    3                1                 1           5   \n",
+       "city_41                     2                1                 3          16   \n",
+       "city_103                    3                1                 3          11   \n",
+       "city_21                     3                1                 0          22   \n",
+       "city_13                     3                0                 3           8   \n",
+       "city_103                    3                1                 3           5   \n",
        "...                       ...              ...               ...         ...   \n",
-       "city_103                    3                1                 6           3   \n",
-       "city_136                    3                0                 1          11   \n",
-       "city_100                    3                1                 0           4   \n",
+       "city_103                    3                1                 6          12   \n",
+       "city_136                    3                0                 3          13   \n",
+       "city_100                    3                1                 0          15   \n",
        "city_102                    2                1                 0           2   \n",
-       "city_102                    3                0                 1          20   \n",
+       "city_102                    3                0                 3          21   \n",
        "\n",
        "          company_size  company_type  last_new_job  training_hours  \n",
        "city                                                                \n",
-       "city_41              8             0             2              21  \n",
-       "city_103             0             3             2              98  \n",
-       "city_21              0             3             4              15  \n",
-       "city_13              2             3             2              39  \n",
-       "city_103             6             3             1              72  \n",
+       "city_41              2             0             4              21  \n",
+       "city_103             0             5             4              98  \n",
+       "city_21              0             5             2              15  \n",
+       "city_13              1             5             4              39  \n",
+       "city_103             4             5             3              72  \n",
        "...                ...           ...           ...             ...  \n",
        "city_103             0             6             6              15  \n",
        "city_136             0             0             5              30  \n",
-       "city_100             0             3             4              18  \n",
-       "city_102             7             6             2              84  \n",
-       "city_102             6             3             5              11  \n",
+       "city_100             0             5             2              18  \n",
+       "city_102             5             6             4              84  \n",
+       "city_102             4             5             5              11  \n",
        "\n",
        "[2129 rows x 11 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1009,6 +1009,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7527386541471048"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#проверка точности на тестовых данных\n",
+    "logreg_cv.score(X_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1017,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1050,7 @@
        "                         'penalty': ['l1', 'l2']})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,6 +1067,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city_development_index\tl1 =\t0.22818791946308725\tl2 =\t0.7718120805369127\n",
+      "gender\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "relevent_experience\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "enrolled_university\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "education_level\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "major_discipline\tl1 =\t0.7785234899328859\tl2 =\t0.7785234899328859\n",
+      "experience\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "company_size\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "company_type\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "last_new_job\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n",
+      "training_hours\tl1 =\t0.7718120805369127\tl2 =\t0.7718120805369127\n"
+     ]
+    }
+   ],
+   "source": [
+    "#вывод подобранных параметров GreedSearchCV для каждого признака\n",
+    "answ = []\n",
+    "answ = logreg_cv.cv_results_['split9_test_score']\n",
+    "\n",
+    "i = 0\n",
+    "for ind in data.columns:\n",
+    "    print(ind, \"l1 =\", answ[i], \"l2 =\", answ[i+1], sep = '\\t')\n",
+    "    i += 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1054,16 +1109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1:0.872065647018388\n",
-      "precision:0.7731543624161075\n",
-      "recall:1.0\n"
+      "f1:0.8712088820250006\n",
+      "precision:0.7728470386188507\n",
+      "recall:0.9982608695652175\n"
      ]
     }
    ],
