--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -513,11 +513,11 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -525,13 +525,13 @@
        "      <td>0.920</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -539,13 +539,13 @@
        "      <td>0.624</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>5</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -553,13 +553,13 @@
        "      <td>0.827</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -567,13 +567,13 @@
        "      <td>0.920</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -591,19 +591,19 @@
        "\n",
        "          enrolled_university  education_level  major_discipline  experience  \\\n",
        "city                                                                           \n",
-       "city_41                     2                1                 3          16   \n",
-       "city_103                    3                1                 3          11   \n",
-       "city_21                     3                1                 0          22   \n",
-       "city_13                     3                0                 3           8   \n",
-       "city_103                    3                1                 3           5   \n",
+       "city_41                     2                1                 4          14   \n",
+       "city_103                    1                1                 4          17   \n",
+       "city_21                     1                1                 0           3   \n",
+       "city_13                     1                0                 4           9   \n",
+       "city_103                    1                1                 4           1   \n",
        "\n",
        "          company_size  company_type  last_new_job  training_hours  \n",
        "city                                                                \n",
-       "city_41              2             0             4              21  \n",
-       "city_103             0             5             4              98  \n",
-       "city_21              0             5             2              15  \n",
-       "city_13              1             5             4              39  \n",
-       "city_103             4             5             3              72  "
+       "city_41              3             0             2              21  \n",
+       "city_103             0             2             2              98  \n",
+       "city_21              0             2             3              15  \n",
+       "city_13              4             2             2              39  \n",
+       "city_103             5             2             4              72  "
       ]
      },
      "execution_count": 7,
@@ -721,11 +721,11 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -733,13 +733,13 @@
        "      <td>0.920</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -747,13 +747,13 @@
        "      <td>0.624</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>22</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>5</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -761,13 +761,13 @@
        "      <td>0.827</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -775,13 +775,13 @@
        "      <td>0.920</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>5</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>72</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -803,13 +803,13 @@
        "      <td>0.920</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>12</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -817,13 +817,13 @@
        "      <td>0.897</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -831,13 +831,13 @@
        "      <td>0.887</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
        "      <td>5</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -848,10 +848,10 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -859,13 +859,13 @@
        "      <td>0.804</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>21</td>\n",
        "      <td>4</td>\n",
+       "      <td>13</td>\n",
        "      <td>5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -890,31 +890,31 @@
        "\n",
        "          enrolled_university  education_level  major_discipline  experience  \\\n",
        "city                                                                           \n",
-       "city_41                     2                1                 3          16   \n",
-       "city_103                    3                1                 3          11   \n",
-       "city_21                     3                1                 0          22   \n",
-       "city_13                     3                0                 3           8   \n",
-       "city_103                    3                1                 3           5   \n",
+       "city_41                     2                1                 4          14   \n",
+       "city_103                    1                1                 4          17   \n",
+       "city_21                     1                1                 0           3   \n",
+       "city_13                     1                0                 4           9   \n",
+       "city_103                    1                1                 4           1   \n",
        "...                       ...              ...               ...         ...   \n",
-       "city_103                    3                1                 6          12   \n",
-       "city_136                    3                0                 3          13   \n",
-       "city_100                    3                1                 0          15   \n",
-       "city_102                    2                1                 0           2   \n",
-       "city_102                    3                0                 3          21   \n",
+       "city_103                    1                1                 6           2   \n",
+       "city_136                    1                0                 4           6   \n",
+       "city_100                    1                1                 0           5   \n",
+       "city_102                    2                1                 0          11   \n",
+       "city_102                    1                0                 4          13   \n",
        "\n",
        "          company_size  company_type  last_new_job  training_hours  \n",
        "city                                                                \n",
-       "city_41              2             0             4              21  \n",
-       "city_103             0             5             4              98  \n",
-       "city_21              0             5             2              15  \n",
-       "city_13              1             5             4              39  \n",
-       "city_103             4             5             3              72  \n",
+       "city_41              3             0             2              21  \n",
+       "city_103             0             2             2              98  \n",
+       "city_21              0             2             3              15  \n",
+       "city_13              4             2             2              39  \n",
+       "city_103             5             2             4              72  \n",
        "...                ...           ...           ...             ...  \n",
-       "city_103             0             6             6              15  \n",
-       "city_136             0             0             5              30  \n",
-       "city_100             0             5             2              18  \n",
-       "city_102             5             6             4              84  \n",
-       "city_102             4             5             5              11  \n",
+       "city_103             0             5             5              15  \n",
+       "city_136             0             0             1              30  \n",
+       "city_100             0             2             3              18  \n",
+       "city_102             8             5             2              84  \n",
+       "city_102             5             2             1              11  \n",
        "\n",
        "[2129 rows x 11 columns]"
       ]
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
       " 8   last_new_job            2129 non-null   int64  \n",
       " 9   training_hours          2129 non-null   int64  \n",
       "dtypes: float64(1), int32(2), int64(7)\n",
-      "memory usage: 246.3+ KB\n"
+      "memory usage: 166.3+ KB\n"
      ]
     }
    ],
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1009,27 +1009,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7527386541471048"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#проверка точности на тестовых данных\n",
-    "logreg_cv.score(X_test, y_test)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1038,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1029,7 @@
        "                         'penalty': ['l1', 'l2']})"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,6 +1043,47 @@
     "logreg=LogisticRegression(solver='liblinear')\n",
     "logreg_cv=GridSearchCV(logreg,grid,cv=10)\n",
     "logreg_cv.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 0.1, 'penalty': 'l1'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#проверка точности на тестовых данных\n",
+    "logreg_cv.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=0.1, penalty='l1', solver='liblinear')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg_cv.best_estimator_ "
    ]
   },
   {
@@ -1098,6 +1118,97 @@
     "for ind in data.columns:\n",
     "    print(ind, \"l1 =\", answ[i], \"l2 =\", answ[i+1], sep = '\\t')\n",
     "    i += 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оценим точность построенного классификатора с помощью метрик precision, recall и F1 на тестов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1:0.8586803331197951\n",
+      "precision:0.7535620547431571\n",
+      "recall:0.9979381443298969\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "print(\"f1:\"+str(np.average(cross_val_score(logreg_cv, X_test, y_test, scoring='f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(logreg_cv, X_test, y_test, scoring='precision'))))\n",
+    "print(\"recall:\"+str(np.average(cross_val_score(logreg_cv, X_test, y_test, scoring='recall'))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Построим классификатор типа Случайный Лес (Random Forest) для решения той же задачи классификации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
+       "             param_grid={'criterion': ['gini'],\n",
+       "                         'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       "                         'max_features': ['auto'],\n",
+       "                         'n_estimators': [50, 100, 150]})"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier \n",
+    "param_grid = { 'n_estimators': [50, 100, 150],'max_features': ['auto'],'max_depth' : list(range(1, 10)), 'criterion' :['gini']}\n",
+    "RandForCrit = GridSearchCV(estimator = RandomForestClassifier(), param_grid = param_grid, cv = 5, refit = True) \n",
+    "RandForCrit.fit(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оценим точность построенного классификатора с помощью метрик precision, recall и F1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1:0.8589274681471991\n",
+      "precision:0.7527436023622047\n",
+      "recall:1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"f1:\"+str(np.average(cross_val_score(RandForCrit.best_estimator_, X_test, y_test, scoring='f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(RandForCrit.best_estimator_, X_test, y_test, scoring='precision'))))\n",
+    "print(\"recall:\"+str(np.average(cross_val_score(RandForCrit.best_estimator_, X_test, y_test, scoring='recall'))))"
    ]
   },
   {
