--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -1047,23 +1047,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'C': 0.1, 'penalty': 'l1'}"
+       "{'mean_fit_time': array([0.00747979, 0.00807807, 0.00758743, 0.00917096, 0.00787861,\n",
+       "        0.01006553, 0.00797901, 0.01076093, 0.01516466, 0.0137713 ,\n",
+       "        0.03100114, 0.016854  , 0.03789721, 0.01795092, 0.0413918 ,\n",
+       "        0.01864216, 0.04098885, 0.01834991, 0.03949306, 0.01835465,\n",
+       "        0.04059699, 0.0183552 ]),\n",
+       " 'std_fit_time': array([0.00091921, 0.00029899, 0.00049503, 0.00132693, 0.00053869,\n",
+       "        0.00081854, 0.00063269, 0.00039341, 0.00115912, 0.00059313,\n",
+       "        0.00553769, 0.00053689, 0.0063233 , 0.00077242, 0.00545207,\n",
+       "        0.00133293, 0.00291408, 0.00101699, 0.00605344, 0.00091076,\n",
+       "        0.00285599, 0.00079562]),\n",
+       " 'mean_score_time': array([0.00438824, 0.00378995, 0.0043808 , 0.00409324, 0.00407872,\n",
+       "        0.00370421, 0.00379372, 0.00379453, 0.00358655, 0.00358999,\n",
+       "        0.00380104, 0.00359149, 0.00359175, 0.00359132, 0.003791  ,\n",
+       "        0.00389476, 0.00389071, 0.00379086, 0.00349183, 0.00378668,\n",
+       "        0.00378449, 0.00358119]),\n",
+       " 'std_score_time': array([0.00079899, 0.0003989 , 0.00065578, 0.00028329, 0.00030249,\n",
+       "        0.00044384, 0.00040137, 0.00040092, 0.00049493, 0.00048912,\n",
+       "        0.00039629, 0.00048858, 0.00048869, 0.00048868, 0.00039895,\n",
+       "        0.00053361, 0.00053751, 0.00039905, 0.00049896, 0.00039652,\n",
+       "        0.00039735, 0.00049018]),\n",
+       " 'param_C': masked_array(data=[1e-05, 1e-05, 0.0001, 0.0001, 0.001, 0.001, 0.01, 0.01,\n",
+       "                    0.1, 0.1, 1.0, 1.0, 10.0, 10.0, 100.0, 100.0, 1000.0,\n",
+       "                    1000.0, 10000.0, 10000.0, 100000.0, 100000.0],\n",
+       "              mask=[False, False, False, False, False, False, False, False,\n",
+       "                    False, False, False, False, False, False, False, False,\n",
+       "                    False, False, False, False, False, False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'param_penalty': masked_array(data=['l1', 'l2', 'l1', 'l2', 'l1', 'l2', 'l1', 'l2', 'l1',\n",
+       "                    'l2', 'l1', 'l2', 'l1', 'l2', 'l1', 'l2', 'l1', 'l2',\n",
+       "                    'l1', 'l2', 'l1', 'l2'],\n",
+       "              mask=[False, False, False, False, False, False, False, False,\n",
+       "                    False, False, False, False, False, False, False, False,\n",
+       "                    False, False, False, False, False, False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'params': [{'C': 1e-05, 'penalty': 'l1'},\n",
+       "  {'C': 1e-05, 'penalty': 'l2'},\n",
+       "  {'C': 0.0001, 'penalty': 'l1'},\n",
+       "  {'C': 0.0001, 'penalty': 'l2'},\n",
+       "  {'C': 0.001, 'penalty': 'l1'},\n",
+       "  {'C': 0.001, 'penalty': 'l2'},\n",
+       "  {'C': 0.01, 'penalty': 'l1'},\n",
+       "  {'C': 0.01, 'penalty': 'l2'},\n",
+       "  {'C': 0.1, 'penalty': 'l1'},\n",
+       "  {'C': 0.1, 'penalty': 'l2'},\n",
+       "  {'C': 1.0, 'penalty': 'l1'},\n",
+       "  {'C': 1.0, 'penalty': 'l2'},\n",
+       "  {'C': 10.0, 'penalty': 'l1'},\n",
+       "  {'C': 10.0, 'penalty': 'l2'},\n",
+       "  {'C': 100.0, 'penalty': 'l1'},\n",
+       "  {'C': 100.0, 'penalty': 'l2'},\n",
+       "  {'C': 1000.0, 'penalty': 'l1'},\n",
+       "  {'C': 1000.0, 'penalty': 'l2'},\n",
+       "  {'C': 10000.0, 'penalty': 'l1'},\n",
+       "  {'C': 10000.0, 'penalty': 'l2'},\n",
+       "  {'C': 100000.0, 'penalty': 'l1'},\n",
+       "  {'C': 100000.0, 'penalty': 'l2'}],\n",
+       " 'split0_test_score': array([0.22147651, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77852349, 0.77181208, 0.77852349, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208]),\n",
+       " 'split1_test_score': array([0.22147651, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.7852349 , 0.79194631, 0.7852349 , 0.7852349 , 0.7852349 ,\n",
+       "        0.7852349 , 0.7852349 , 0.7852349 , 0.7852349 , 0.7852349 ,\n",
+       "        0.7852349 , 0.7852349 ]),\n",
+       " 'split2_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77852349,\n",
+       "        0.77181208, 0.77181208, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77852349]),\n",
+       " 'split3_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77852349, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208]),\n",
+       " 'split4_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208]),\n",
+       " 'split5_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.76510067, 0.77181208, 0.76510067, 0.76510067, 0.76510067,\n",
+       "        0.76510067, 0.76510067, 0.76510067, 0.76510067, 0.76510067,\n",
+       "        0.76510067, 0.76510067]),\n",
+       " 'split6_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.76510067,\n",
+       "        0.72483221, 0.74496644, 0.72483221, 0.72483221, 0.72483221,\n",
+       "        0.72483221, 0.72483221, 0.72483221, 0.72483221, 0.72483221,\n",
+       "        0.72483221, 0.72483221]),\n",
+       " 'split7_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.75167785, 0.76510067, 0.74496644, 0.74496644, 0.74496644,\n",
+       "        0.74496644, 0.74496644, 0.74496644, 0.74496644, 0.74496644,\n",
+       "        0.74496644, 0.74496644]),\n",
+       " 'split8_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.74496644, 0.75167785, 0.74496644, 0.74496644, 0.74496644,\n",
+       "        0.74496644, 0.74496644, 0.74496644, 0.74496644, 0.74496644,\n",
+       "        0.74496644, 0.74496644]),\n",
+       " 'split9_test_score': array([0.22818792, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77181208,\n",
+       "        0.77181208, 0.77181208, 0.77181208, 0.77181208, 0.77852349,\n",
+       "        0.77852349, 0.77852349, 0.77852349, 0.77852349, 0.77852349,\n",
+       "        0.77852349, 0.77181208]),\n",
+       " 'mean_test_score': array([0.22684564, 0.77315436, 0.77315436, 0.77315436, 0.77315436,\n",
+       "        0.77315436, 0.77315436, 0.77315436, 0.7738255 , 0.77315436,\n",
+       "        0.76375839, 0.76912752, 0.76308725, 0.76375839, 0.76375839,\n",
+       "        0.76375839, 0.76375839, 0.76375839, 0.76375839, 0.76375839,\n",
+       "        0.76375839, 0.76308725]),\n",
+       " 'std_test_score': array([0.00268456, 0.00268456, 0.00268456, 0.00268456, 0.00268456,\n",
+       "        0.00268456, 0.00268456, 0.00268456, 0.00307555, 0.00402685,\n",
+       "        0.0171896 , 0.01244781, 0.0177694 , 0.0182076 , 0.0182076 ,\n",
+       "        0.0182076 , 0.0182076 , 0.0182076 , 0.0182076 , 0.0182076 ,\n",
+       "        0.0182076 , 0.0177694 ]),\n",
+       " 'rank_test_score': array([22,  3,  3,  3,  3,  3,  3,  3,  1,  2, 11, 10, 20, 11, 11, 11, 11,\n",
+       "        11, 11, 11, 11, 20])}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#проверка точности на тестовых данных\n",
-    "logreg_cv.best_params_"
+    "logreg_cv.cv_results_"
    ]
   },
   {
